Prevent large widgets to break the footer

--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -165,6 +165,7 @@ aside#sidebar {
 			color: $beige;
 			font-size: 0.8em;
 			vertical-align: top;
+			overflow: auto;
 
 			a,
 			a:visited {
